# fountain

./: Cargo.toml
data/: sample.txt  sample2.txt  sample3.txt
fountain-test/: Cargo.toml
fountain-test/src/: main.rs
src/: droplet.rs  encoder.rs  ldpc.rs  lib.rs  soliton.rs
tests/: ber_test.rs  comparison_enc_dec_prop_test.rs  ldpc_test.rs  robust_enc_dec_prop_test.rs  robust_sol_enc_dec_tests.rs
