[package]
name = "fountain-test"
version = "0.1.0"
authors = ["Robert Keith <robertfkeith@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[dependencies]
tokio = { version = "0.2.22", features = ["full", "tcp", "udp", "rt-threaded", "sync", "time", "macros"] }
rand = "0.7.2"
structopt = { version = "0.3.2", default-features = false }
base64 = "0.12.0"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fountaincode = { path = "../" }
labrador-ldpc = "1.0.0"
bincode = "1.3.1"
tokio-util = { version = "0.4.0", features = ["full"] }
